--- a/templates/result.html
+++ b/templates/result.html
@@ -23,7 +23,7 @@
 	<table border="1">
   <tr>
     <th><font color="#8a2be2">相似客户({{ prediction["top_similarity"] }})购买的产品ID</font></th>
-    <th><font color="#8a2be2">频次</font></th>
+    <th><font color="#8a2be2">购买数量</font></th>
   </tr>
  	{% for pd,od in prediction["items"] %}
 	<tr>
